# PhysicsEngine

./: .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  conanfile.txt
.devcontainer/: devcontainer.json
.github/workflows/: template-sync.yml
PhysicsEngine/: Physics.h  RigidBody.h  World.h
PhysicsEngine/Collision/: Contact.h  ContactResolver.h  Joint.h
PhysicsEngine/Geometry/: Plane.cpp  Plane.h
conan_profiles/: clang  clang_debug  clang_release  gcc  gcc_debug  mingw
physics/: CMakeLists.txt  main.cpp
physics/include/: MathTypes.h  Physics.h  RigidBody.h  World.h
physics/include/Collision/: CollisionDetector.h  Contact.h  IntersectionTests.h  Joint.h
physics/include/Geometry/: Box.h  Plane.h  Primitive.h  Sphere.h
physics/src/: RigidBody.cpp  World.cpp
physics/src/Collision/: CollisionDetector.cpp  Contact.cpp  ContactResolver.cpp  IntersectionTests.cpp  Joint.cpp
physics/src/Geometry/: Box.cpp  Plane.cpp  Primitive.cpp  Sphere.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
